--- a/Login forms/form login/index.html
+++ b/Login forms/form login/index.html
@@ -39,7 +39,7 @@
                 <p>Don't have an account? <a href="#">Create your account</a></p>
                 <div class="input">
                     <input type="text" placeholder="Username or email">
-                    <input type="text" placeholder="Password">
+                    <input type="password" placeholder="Password">
 
                 </div>
 
@@ -49,16 +49,6 @@
 
                 <button>Log in</button>
 
-                <div class="social">
-                    <div class="facebook">
-
-                    </div>
-                    <div class="twitter">
-
-                    </div>
-                    <div class="google">
-
-                    </div>
 
                 </div>
                 
