extending menu and fixing html

--- a/responsive with media queries/menu_3/index.html
+++ b/responsive with media queries/menu_3/index.html
@@ -34,7 +34,7 @@
                         </a></li>
                     <li>
                         <a href="#"><i class="fas fa-search-dollar"></i>
-                            <span class="copy"></span>Search engine optimization</span>
+                            <span class="copy">Search engine optimization</span>
                             <span class="desc">We are the best at making thinks pretty!</span>
                         </a></li>
                     
